# stache

./: .travis.yml  CHANGELOG.md  LICENSE.md  README.md  stache-plus.cabal  stack.yaml
bench/: Main.hs
lib/Text/Mustache/: Plus.hs
lib/Text/Mustache/Plus/: Compile.hs  Parser.hs  Render.hs  Type.hs
lib/Text/Mustache/Plus/Compile/: TH.hs
mustache-spec/: Spec.hs
tests/Text/Mustache/Plus/: ParserSpec.hs  RenderSpec.hs  TypeSpec.hs
tests/Text/Mustache/Plus/Compile/: THSpec.hs
